--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Compiled class file
-*.class
-
 # Log file
 *.log
 
@@ -15,9 +12,14 @@
 *.war
 *.nar
 *.ear
-*.zip
 *.tar.gz
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+/target/
+/.project
+/.settings
+/.classpath
+*.bwc
