--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - "src/main/**.java"
       - "src/test/**.java"
-#      - ".github/workflows/**"
+      - ".github/workflows/**"
       - "**.properties"
       - "**.xml"
 
@@ -16,7 +16,7 @@ jobs:
   build-and-test-with-Java-8-and-later:
     name: Build -> Test (JVM ${{ matrix.java }}, ${{ matrix.os }})
     strategy:
-      fail-fast: true
+      fail-fast: false
       max-parallel: 16
       matrix:
         os: [ubuntu-latest, windows-latest]
