--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -19,8 +19,8 @@ jobs:
       fail-fast: false
       max-parallel: 16
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        java: [8, 9, 10, 11, 12, 13, 14, 15, 16]
+        os: [windows-latest]
+        java: [9, 10, 11, 12, 13, 14, 15, 16]
         architecture: [x64]
     runs-on: ${{ matrix.os }}
     steps:
@@ -43,7 +43,7 @@ jobs:
       - name: Set up JDK 15
         uses: actions/setup-java@v1
         with:
-          java-version: 15
+          java-version: 16
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
