--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
     
-  build-and-test-with-Java-8-and-later:
+  build-and-test-on-windows-with-Java-8-and-later:
     name: Build -> Test (JVM ${{ matrix.java }}, ${{ matrix.os }})
     strategy:
       fail-fast: false
@@ -40,7 +40,7 @@ jobs:
         name: Build and test with early access version JDK
         run: mvn -B clean test -Dproject_jdk_version=18 -DskipTests=false --file pom.xml
   
-  build-and-test-with-Java-8-and-later:
+  build-and-test-on-linux-with-Java-8-and-later:
     name: Build -> Test (JVM ${{ matrix.java }}, ${{ matrix.os }})
     strategy:
       fail-fast: false
@@ -75,7 +75,7 @@ jobs:
        
   release:
     name: Release if requested
-    needs: [build-and-test-with-Java-8-and-later]
+    needs: [build-and-test-on-windows-with-Java-8-and-later, build-and-test-on-linux-with-Java-8-and-later]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && endsWith(github.event.head_commit.message, 'Releasing new version')
     steps:
@@ -83,7 +83,7 @@ jobs:
       - name: Set up JDK 15
         uses: actions/setup-java@v1
         with:
-          java-version: 16
+          java-version: 15
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
