--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 		<repository.url>https://burningwave@github.com/burningwave/jvm-driver.git</repository.url>
 
 		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+		<exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.7.6.201602180812</jacoco-maven-plugin.version>
 		<junit-jupiter.version>5.7.0</junit-jupiter.version>
 		<junit.version>1.7.0</junit.version>
@@ -199,9 +200,9 @@
 		</testResources>
 		<plugins>
 			<plugin>
-				<artifactId>exec-maven-plugin</artifactId>
 				<groupId>org.codehaus.mojo</groupId>
-				<version>3.0.0</version>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${exec-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<phase>compile</phase>
