--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/burningwave/jvm-driver</url>
-		<tag>jvm-driver-0.9.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<dependencies>
