--- a/pom.xml
+++ b/pom.xml
@@ -460,6 +460,41 @@
 			<properties>
 				<org.codehaus.mojo.exec-maven-plugin.exec-extension>sh</org.codehaus.mojo.exec-maven-plugin.exec-extension>
 			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>${exec-maven-plugin.version}</version>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<id>chmod compileExternalClasses.sh</id>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>chmod +x ${project.basedir}/src/main/resources/compileExternalClasses.sh</executable>
+								</configuration>
+							</execution>
+							<execution>
+								<phase>compile</phase>
+								<id>compile external classes</id>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${project.basedir}/src/main/resources/compileExternalClasses.${org.codehaus.mojo.exec-maven-plugin.exec-extension}</executable>
+									<arguments>
+										<argument>${java.home}</argument>
+										<argument>${project.basedir}/src/main/resources</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 		<profile>
 			<id>mac-profile</id>
