--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -59,13 +59,19 @@ jobs:
           architecture: ${{ matrix.architecture }}
       - if: endsWith(matrix.java, '-ea') != true 
         name: Build and test with final version JDK
-        run: mvn -B clean test -Dproject_jdk_version=${{ matrix.java }} -DskipTests=false --file pom.xml
+        run: |
+           chmod +x ./src/main/resources/compileExternalClasses.sh
+           mvn -B clean test -Dproject_jdk_version=${{ matrix.java }} -DskipTests=false --file pom.xml
       - if: endsWith(matrix.java, '17-ea') == true 
         name: Build and test with early access version JDK
-        run: mvn -B clean test -Dproject_jdk_version=17 -DskipTests=false --file pom.xml
+        run: |
+           chmod +x ./src/main/resources/compileExternalClasses.sh
+           mvn -B clean test -Dproject_jdk_version=17 -DskipTests=false --file pom.xml
       - if: endsWith(matrix.java, '18-ea') == true 
         name: Build and test with early access version JDK
-        run: mvn -B clean test -Dproject_jdk_version=18 -DskipTests=false --file pom.xml
+        run: |
+           chmod +x ./src/main/resources/compileExternalClasses.sh
+           mvn -B clean test -Dproject_jdk_version=18 -DskipTests=false --file pom.xml
   
   build-and-test-on-mac-os-with-Java-8-and-later:
     name: Build -> Test (JVM ${{ matrix.java }}, ${{ matrix.os }})
