--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 	<groupId>org.burningwave</groupId>
 	<artifactId>jvm-driver</artifactId>
-	<version>0.10.1-SNAPSHOT</version>
+	<version>0.11.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Burningwave JVM driver</name>
@@ -129,7 +129,7 @@
 		<connection>scm:git:${repository.url}</connection>
 		<developerConnection>scm:git:${repository.url}</developerConnection>
 		<url>https://github.com/burningwave/jvm-driver</url>
-		<tag>HEAD</tag>
+		<tag>jvm-driver-0.9.6</tag>
 	</scm>
 	
 	<dependencies>
@@ -317,7 +317,9 @@
 				<version>${maven-source-plugin.version}</version>
 				<configuration>
 					<excludes>
+						<exclude>org/burningwave/jvm/driver/java/AccessibleSetterRetrieverForJDK9.bwc</exclude>
 						<exclude>org/burningwave/jvm/driver/java/ClassLoaderDelegateForJDK9.bwc</exclude>
+						<exclude>org/burningwave/jvm/driver/java/ConsulterRetrieverForJDK9.bwc</exclude>
 					</excludes>
 				</configuration>
 				<executions>
@@ -427,7 +429,9 @@
 						</executions>
 						<configuration>
 							<excludes>
+								<exclude>**/*AccessibleSetterInvokerForJDK9.*</exclude>
 								<exclude>**/*ClassLoaderDelegateForJDK9.*</exclude>
+								<exclude>**/*ConsulterRetrieverForJDK9.*</exclude>
 							</excludes>
 						</configuration>
 					</plugin>
