--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,8 @@
 	<properties>
 		<copyright.holder>Roberto Gentili</copyright.holder>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- Can be changed with one of this values: 9, 10, 11, 12, 13, 14, 15, 16, 17 -->
-		<project_jdk_version>15</project_jdk_version>
+		<!-- IMPORTANT: A JDK version 9 or higher is required to compile the project. The property 'project_jdk_version' must be set to 8 -->
+		<project_jdk_version>8</project_jdk_version>
 		<javadocExecutable.relativePath>bin/javadoc</javadocExecutable.relativePath>
 		<skipTests>true</skipTests>
 		<project.test.testSuite>AllExceptHeavyTestsSuite</project.test.testSuite>
