--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -14,7 +14,7 @@ on:
 jobs:
     
   build-and-test-with-Java-9-and-later:
-    name: Build -> Test (JVM ${{ matrix.java }}, ${{ matrix.os }})
+    name: Build -> Test (JVM ${{ matrix.architecture }}, JVM ${{ matrix.java }}, ${{ matrix.os }})
     strategy:
       fail-fast: false
       max-parallel: 16
