--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -14,13 +14,14 @@ on:
 jobs:
     
   build-and-test-with-Java-9-and-later:
-    name: Build -> Test (JVM ${{ matrix.architecture }}, JVM ${{ matrix.java }}, ${{ matrix.os }})
+    name: Build -> Test (${{ matrix.architecture }}, JVM ${{ matrix.java }}, ${{ matrix.os }})
     strategy:
       fail-fast: false
       max-parallel: 16
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [9, 10, 11, 12, 13, 14, 15, 16, 17-ea, 18-ea]
+#        java: [9, 10, 11, 12, 13, 14, 15, 16, 17-ea, 18-ea]
+         java: [17-ea, 18-ea]
         architecture: [x86, x64]
     runs-on: ${{ matrix.os }}
     steps:
