Releasing new version

--- a/.github/workflows/[A] build and test, release if requested.yml
+++ b/.github/workflows/[A] build and test, release if requested.yml
@@ -30,7 +30,7 @@ name: Build and release if requested
 on:
   push:
     branches:
-      - experimental
+      - main
     paths:
       - "**.sh"
       - "**.cmd"
