--- a/java/pom.xml
+++ b/java/pom.xml
@@ -31,15 +31,13 @@
 	
 	<parent>
     	<groupId>org.burningwave</groupId>
-    	<artifactId>jvm-driver-parent</artifactId>
+    	<artifactId>jvm-driver</artifactId>
         <version>${revision}</version>
     </parent>
 	
-	<artifactId>jvm-driver</artifactId>
+	<artifactId>java</artifactId>
 	
 	<packaging>jar</packaging>
-	
-	<name>Burningwave JVM driver</name>
 		
 	<properties>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
