--- a/java/pom.xml
+++ b/java/pom.xml
@@ -59,6 +59,17 @@
 		<maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
 	</properties>
 	
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	
 	<dependencies>
 
 		<dependency>
