--- a/native/pom.xml
+++ b/native/pom.xml
@@ -32,12 +32,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.burningwave</groupId>
+		<groupId>org.burningwave.parent</groupId>
 		<artifactId>jvm-driver</artifactId>
 		<version>${revision}</version>
 	</parent>
-
-	<artifactId>native</artifactId>
+	
+	<groupId>org.burningwave</groupId>
+	<artifactId>jvm-driver-native</artifactId>
 
 	<properties>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
