--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.burningwave</groupId>
+    <groupId>org.burningwave.parent</groupId>
     <artifactId>jvm-driver</artifactId>
     <version>${revision}</version>
 
