--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     
     <groupId>org.burningwave.parent</groupId>
     <artifactId>jvm-driver</artifactId>
-    <version>${revision}</version>
+    <version>0.19.0</version>
 	
 		<description>
 		A driver to allow deep interaction with the JVM without any restrictions
